--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.5",
+    "@emailjs/browser": "^3.6.2",
+    "animate.css": "^4.1.1",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^9.9.3",
+    "next": "^12.2.6-canary.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "eslint": "8.23.0",
