--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/client": "^3.3.6",
+    "@sanity/image-url": "^1.0.1",
     "animate.css": "^4.1.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.9.3",
+    "groq": "^2.29.3",
     "next": "^12.2.6-canary.6",
+    "next-sanity-image": "^4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-reveal": "^1.2.2"
